--- a/extensions/molecule/setup_role/prepare.yml
+++ b/extensions/molecule/setup_role/prepare.yml
@@ -4,7 +4,7 @@
   gather_facts: false
   tasks:
     - name: Install dropbear SSH server using docker exec
-      ansible.builtin.shell:
+      ansible.builtin.command:
         cmd: |
           docker exec {{ inventory_hostname }} sh -c '
             mkdir -p /var/lock
@@ -16,7 +16,7 @@
       changed_when: true
 
     - name: Start dropbear in background
-      ansible.builtin.shell:
+      ansible.builtin.command:
         cmd: docker exec -d {{ inventory_hostname }} /usr/sbin/dropbear -R -F -p 22
       delegate_to: localhost
       changed_when: true
