--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -78,6 +78,8 @@ jobs:
           # consider dropping testing against EOL versions and versions you don't support.
           - stable-2.17
           - stable-2.18
+          - stable-2.19
+          - stable-2.20
           - devel
         # - milestone
 
