--- a/source_modules/command.yml
+++ b/source_modules/command.yml
@@ -52,5 +52,58 @@ DOCUMENTATION:
   notes:
     - This module was crafted for OpenWrt devices with no Python installed, it uses shell scripts instead.
 
-EXAMPLES:
+EXAMPLES: |
+  - name: Run a simple command
+    community.openwrt.command:
+      cmd: uptime
+
+  - name: Run a command with arguments
+    community.openwrt.command:
+      cmd: ls -la /etc
+
+  - name: Change directory before running command
+    community.openwrt.command:
+      cmd: pwd
+      chdir: /tmp
+
+  - name: Only run if file does not exist
+    community.openwrt.command:
+      cmd: touch /tmp/myfile
+      creates: /tmp/myfile
+
 RETURN:
+  cmd:
+    description: The command executed.
+    returned: always
+    type: str
+    sample: /usr/bin/uptime
+  stdout:
+    description: The command standard output.
+    returned: always
+    type: str
+    sample: Foo foo foo
+  stderr:
+    description: The command standard error.
+    returned: always
+    type: str
+    sample: ""
+  rc:
+    description: The command return code.
+    returned: always
+    type: int
+    sample: 0
+  start:
+    description: The command start time.
+    returned: always
+    type: str
+    sample: "2025-12-05 10:15:23.000000"
+  end:
+    description: The command end time.
+    returned: always
+    type: str
+    sample: "2025-12-05 10:15:25.000000"
+  delta:
+    description: The command execution time.
+    returned: always
+    type: str
+    sample: "0:00:02.000000"
