--- a/source_modules/setup.yml
+++ b/source_modules/setup.yml
@@ -17,5 +17,72 @@ DOCUMENTATION:
     - Facts are returned in the RV(ansible_facts) namespace.
 
 EXAMPLES: |
+  - name: Gather facts from OpenWrt device
+    community.openwrt.setup:
+
+  - name: Display gathered facts
+    community.openwrt.setup:
+    register: openwrt_facts
+
+  - name: Show distribution version
+    ansible.builtin.debug:
+      msg: "{{ ansible_distribution_version }}"
 
 RETURN:
+  ansible_facts:
+    description: Facts gathered from the OpenWrt system.
+    returned: always
+    type: dict
+    contains:
+      ansible_hostname:
+        description: The hostname of the system.
+        type: str
+        sample: router
+      ansible_distribution:
+        description: The distribution name.
+        type: str
+        sample: OpenWrt
+      ansible_distribution_version:
+        description: The distribution version.
+        type: str
+        sample: 22.03.5
+      ansible_distribution_major_version:
+        description: The major version of the distribution.
+        type: str
+        sample: "22"
+      ansible_distribution_release:
+        description: The distribution release codename.
+        type: str
+        sample: ""
+      ansible_os_family:
+        description: The OS family.
+        type: str
+        sample: OpenWRT
+      ansible_is_chroot:
+        description: Whether the system is running in a chroot.
+        type: bool
+        sample: false
+      openwrt_info:
+        description: System information from C(ubus).
+        returned: when available
+        type: dict
+      openwrt_devices:
+        description: Network device status from C(ubus).
+        returned: when available
+        type: dict
+      openwrt_services:
+        description: Service list from C(ubus).
+        returned: when available
+        type: dict
+      openwrt_board:
+        description: Board information from C(ubus).
+        returned: when available
+        type: dict
+      openwrt_wireless:
+        description: Wireless status from C(ubus).
+        returned: when available
+        type: dict
+      openwrt_interfaces:
+        description: Network interface status from C(ubus).
+        returned: when available
+        type: dict
