--- a/source_modules/sysctl.yml
+++ b/source_modules/sysctl.yml
@@ -57,8 +57,39 @@ DOCUMENTATION:
         - ignoreerrors
   notes:
     - This module is designed for OpenWrt devices without Python installed.
-  supports_check_mode: true
 
 EXAMPLES: |
+  - name: Enable IP forwarding
+    community.openwrt.sysctl:
+      name: net.ipv4.ip_forward
+      value: '1'
+      state: present
+
+  - name: Set kernel parameter and apply immediately
+    community.openwrt.sysctl:
+      name: net.ipv4.tcp_syncookies
+      value: '1'
+      sysctl_set: true
+
+  - name: Remove a sysctl entry
+    community.openwrt.sysctl:
+      name: net.ipv6.conf.all.forwarding
+      state: absent
+
+  - name: Set value without reloading
+    community.openwrt.sysctl:
+      name: vm.swappiness
+      value: '10'
+      reload: false
 
 RETURN:
+  name:
+    description: The sysctl key that was managed.
+    returned: always
+    type: str
+    sample: net.ipv4.ip_forward
+  value:
+    description: The value of the sysctl key.
+    returned: when O(state=present)
+    type: str
+    sample: "1"
