--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -52,26 +52,26 @@ jobs:
                     - ansible: stable-2.17
                       python: "3.12"
                     # # ansible-core 2.18
-                    # - ansible: stable-2.18
-                    #   python: "3.11"
-                    # - ansible: stable-2.18
-                    #   python: "3.12"
-                    # - ansible: stable-2.18
-                    #   python: "3.13"
+                    - ansible: stable-2.18
+                      python: "3.11"
+                    - ansible: stable-2.18
+                      python: "3.12"
+                    - ansible: stable-2.18
+                      python: "3.13"
                     # # ansible-core 2.19
-                    # - ansible: stable-2.19
-                    #   python: "3.11"
-                    # - ansible: stable-2.19
-                    #   python: "3.12"
-                    # - ansible: stable-2.19
-                    #   python: "3.13"
+                    - ansible: stable-2.19
+                      python: "3.11"
+                    - ansible: stable-2.19
+                      python: "3.12"
+                    - ansible: stable-2.19
+                      python: "3.13"
                     # # ansible-core 2.20
-                    # - ansible: stable-2.20
-                    #   python: "3.12"
-                    # - ansible: stable-2.20
-                    #   python: "3.13"
-                    # - ansible: stable-2.20
-                    #   python: "3.14"
+                    - ansible: stable-2.20
+                      python: "3.12"
+                    - ansible: stable-2.20
+                      python: "3.13"
+                    - ansible: stable-2.20
+                      python: "3.14"
 
         steps:
             - name: Checkout code
