--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -1,3 +1,12 @@
 ---
 ancestor: null
-releases: {}
+releases:
+  0.1.0:
+    changes:
+      release_summary: 'This is the first release of the ``community.openwrt`` collection.
+
+        The code in this collection was mostly brought over from gekmihesg.openwrt
+        (Ansible role).'
+    fragments:
+      - 0.1.0.yml
+    release_date: '2025-12-06'
