--- a/changelogs/config.yaml
+++ b/changelogs/config.yaml
@@ -34,7 +34,7 @@ sections:
   - Bugfixes
 - - known_issues
   - Known Issues
-title: Community OpenWrt Release Notes
+title: Community OpenWrt
 trivial_section_name: trivial
 use_fqcn: true
 vcs: auto
