small housekeeping changes

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -27,10 +27,9 @@ issues: https://github.com/ansible-collections/community.openwrt/issues
 
 build_ignore:
   # https://docs.ansible.com/ansible/devel/dev_guide/developing_collections_distributing.html#ignoring-files-and-folders
-  - .gitignore
   - changelogs/.plugin-cache.yaml
   - extensions/
-  - Pipfile
-  - Pipfile.lock
-  - build_templates/
-  - source_modules/
+  - Pipfile*
+  - .*
+  - AI
+  
