docs: add platforms attribute, refine some docs

--- a/plugins/modules/wrapper.yml
+++ b/plugins/modules/wrapper.yml
@@ -11,7 +11,7 @@ DOCUMENTATION:
     - It serves as a runtime wrapper that sources and executes shell-based module scripts.
     - End users should not call this module directly.
     - The action plugins transfer the appropriate module script and invoke this wrapper
-      with the script path provided via the C(_openwrt_script) parameter.
+      with the script path provided via the O(_openwrt_script) parameter.
   options:
     _openwrt_script:
       description:
@@ -19,7 +19,6 @@ DOCUMENTATION:
         - This parameter is automatically set by the collection's action plugins.
         - Should not be used directly by end users.
       type: str
-      required: false
   notes:
     - This module is part of the internal implementation of the community.openwrt collection.
     - It should not be invoked directly in playbooks.
