--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -10,3 +10,49 @@ releases:
     fragments:
       - 0.1.0.yml
     release_date: '2025-12-06'
+  0.2.0:
+    changes:
+      minor_changes:
+        - command - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - command action plugin - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - copy - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - copy action plugin - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - file - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - file action plugin - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - lineinfile - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - lineinfile action plugin - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - nohup - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - nohup action plugin - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - openwrt_action plugin utils - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - opkg - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - opkg action plugin - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - ping - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - ping action plugin - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - service - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - service action plugin - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - setup - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - setup action plugin - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - slurp - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - slurp action plugin - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - stat - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - stat action plugin - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - sysctl - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - sysctl action plugin - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - uci - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - uci action plugin - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+        - wrapper - revamp the shell wrapping mechanism (https://github.com/ansible-collections/community.openwrt/pull/14).
+      release_summary: 'Use action plugins to "wrap" shell-based modules.
+
+        Update ``build_ignore`` in ``galaxy.yml``.
+
+        Move module docs to ``.py`` files.
+
+        Mark ``shell=ash`` for ``shellcheck``.'
+    fragments:
+      - 0.2.0.yml
+      - 14-wrapper-revamp.yml
+    modules:
+      - description: Internal wrapper module for OpenWRT shell-based modules.
+        name: wrapper
+        namespace: ''
+    release_date: '2025-12-14'
