--- a/extensions/molecule/default/converge.yml
+++ b/extensions/molecule/default/converge.yml
@@ -3,7 +3,7 @@
   hosts: all
   gather_facts: false
   roles:
-    - role: community.openwrt.setup
+    - role: community.openwrt.init
       vars:
         openwrt_install_recommended_packages: true
   tasks:
