--- a/extensions/molecule/snapshot/converge.yml
+++ b/extensions/molecule/snapshot/converge.yml
@@ -7,9 +7,9 @@
       ansible.builtin.raw: "mkdir -p /var/lock"
       changed_when: false
 
-    - name: "Include community.openwrt.setup role"
+    - name: "Include community.openwrt.init role"
       ansible.builtin.include_role:
-        name: community.openwrt.setup
+        name: community.openwrt.init
 
     - name: "Gather facts using community.openwrt.setup"
       community.openwrt.setup:
