add/improve documentation
- update README.md
- add extra docs
  - add the User Guide
  - add the Migration Guide
- update forum references to use tag `community-openwrt`
- remove gekmihesg as author of the collection
  - he is kept as author of most modules and role files
- remove init role's README.md, most content migrated to the User Guide
- change the default value of `openwrt_scp_if_ssh` back to `true`

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -7,7 +7,6 @@ version: 0.3.0
 readme: README.md
 authors:
   - Alexei Znamensky (github.com/russoz)
-  - Markus Weippert (github.com/gekmihesg)
 description: >-
   The community.openwrt collection provides Ansible code to manage OpenWrt devices.
   Supports OpenWRT devices without Python installed by using shell-based modules.
@@ -17,7 +16,7 @@ tags:
   - networking
   - router
 repository: https://github.com/ansible-collections/community.openwrt
-# documentation: https://github.com/ansible-collection-migration/community.openwrt/tree/main/docs
+documentation: https://ansible-collections.github.io/community.openwrt/branch/main/
 homepage: https://github.com/ansible-collections/community.openwrt
 issues: https://github.com/ansible-collections/community.openwrt/issues
 
