--- a/.github/workflows/docs-push.yml
+++ b/.github/workflows/docs-push.yml
@@ -47,6 +47,9 @@ jobs:
       id-token: write
     needs: [build-docs]
     name: Publish Ansible Docs
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     uses: ansible-community/github-docs-build/.github/workflows/_shared-docs-build-publish-gh-pages.yml@main
     with:
       artifact-name: ${{ needs.build-docs.outputs.artifact-name }}
