--- a/.github/workflows/docs-push.yml
+++ b/.github/workflows/docs-push.yml
@@ -3,7 +3,7 @@
 # GNU General Public License v3.0+ (see LICENSES/GPL-3.0-or-later.txt or https://www.gnu.org/licenses/gpl-3.0.txt)
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-name: Collection Docs
+name: Collection Docs (PUSH)
 concurrency:
   group: docs-push-${{ github.sha }}
   cancel-in-progress: true
