comment out the entry for the future developer guide

--- a/docs/docsite/extra-docs.yml
+++ b/docs/docsite/extra-docs.yml
@@ -8,5 +8,5 @@ sections:
     toctree:
       - user_guide
       - migration_guide
-  - title: Developer Guides
-    toctree: []
+  # - title: Developer Guides
+  #   toctree: []
