mod dev guide: initial commit

--- a/docs/docsite/extra-docs.yml
+++ b/docs/docsite/extra-docs.yml
@@ -8,5 +8,6 @@ sections:
     toctree:
       - user_guide
       - migration_guide
-  # - title: Developer Guides
-  #   toctree: []
+  - title: Developer Guides
+    toctree:
+      - mod_dev_guide
