test(molecule): install recommended pkgs in verify.yml

--- a/extensions/molecule/default/verify.yml
+++ b/extensions/molecule/default/verify.yml
@@ -5,7 +5,7 @@
   roles:
     - role: community.openwrt.init
       vars:
-        openwrt_install_recommended_packages: false
+        openwrt_install_recommended_packages: true
   tasks:
     - name: Retrieve /etc/os-release
       community.openwrt.slurp:
@@ -55,7 +55,8 @@
 
     - name: Verify recommended packages were installed
       community.openwrt.command:
-        cmd: sh -c '[ -x /bin/base64 ] && [ -x /usr/bin/sha1sum ]'
+        cmd: 'sleep 3; [ -x /bin/base64 ] && [ -x /usr/bin/sha1sum ]'
+        uses_shell: true
       changed_when: false
 
     - name: Create test file on controller
