fix placement of variable

--- a/extensions/molecule/default/verify.yml
+++ b/extensions/molecule/default/verify.yml
@@ -31,6 +31,10 @@
       register: holy_canole
       changed_when: false
 
+    - name: Show the canole
+      ansible.builtin.debug:
+        var: holy_canole
+
     - name: Assert Canole
       ansible.builtin.assert:
         that:
