--- a/tests/integration/targets/command/molecule/default/converge.yml
+++ b/tests/integration/targets/command/molecule/default/converge.yml
@@ -8,20 +8,22 @@
         openwrt_install_recommended_packages: true
   pre_tasks:
     - name: Install dropbear SSH server using docker exec
-      ansible.builtin.command:
-        cmd: |
-          docker exec {{ inventory_hostname }} sh -c '
-            mkdir -p /var/lock
-            opkg update
-            opkg install dropbear
-            passwd -d root
-          '
+      community.docker.docker_container_exec:
+        container: "{{ inventory_hostname }}"
+        command: >
+          sh -c
+          'mkdir -p /var/lock;
+          opkg update;
+          opkg install dropbear;
+          passwd -d root'
       delegate_to: localhost
       changed_when: true
 
     - name: Start dropbear in background
-      ansible.builtin.command:
-        cmd: docker exec -d {{ inventory_hostname }} /usr/sbin/dropbear -R -F -B -p 22
+      community.docker.docker_container_exec:
+        container: "{{ inventory_hostname }}"
+        detach: true
+        command: /usr/sbin/dropbear -R -F -B -p 22
       delegate_to: localhost
       changed_when: true
 
