--- a/extensions/molecule/default/molecule.yml
+++ b/extensions/molecule/default/molecule.yml
@@ -1,70 +1,13 @@
 ---
-dependency:
-  name: galaxy
 driver:
   name: docker
 platforms:
-  - name: openwrt_x86_64-24.10.4
-    image: openwrt/rootfs:x86_64-24.10.4
-    command: sleep infinity
+  - name: "openwrt_x86_64-${OPENWRT_VERSION}"
+    image: "openwrt/rootfs:x86_64-${OPENWRT_VERSION}"
+    command: sh -c 'mkdir -p /var/lock; sleep infinity'
     pre_build_image: true
-    published_ports:
-      - "2224:22"
-    groups:
-      - openwrt
-
-  - name: openwrt_x86_64-23.05.6
-    image: openwrt/rootfs:x86_64-23.05.6
-    command: sleep infinity
-    pre_build_image: true
-    groups:
-      - openwrt
-
-  - name: openwrt_x86_64-22.03.7
-    image: openwrt/rootfs:x86_64-22.03.7
-    command: sleep infinity
-    pre_build_image: true
-    groups:
-      - openwrt
-
-  - name: openwrt_x86_64-21.02.7
-    image: openwrt/rootfs:x86_64-21.02.7
-    command: sleep infinity
-    pre_build_image: true
-    groups:
-      - openwrt
-provisioner:
-  name: ansible
-  playbooks:
-    converge: ${MOLECULE_PLAYBOOK:-converge.yml}
-  inventory:
-    host_vars:
-      openwrt_x86_64-24.10.4:
-        ansible_user: root
-        ansible_connection: ssh
-        ansible_host: 127.0.0.1
-        ansible_ssh_pass: ""
-        ansible_ssh_common_args: "-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PubkeyAuthentication=no"
-        ansible_port: 2224
-        ansible_shell_type: sh
-        ansible_remote_tmp: /tmp/.ansible/tmp
-      openwrt_x86_64-23.05.6:
-        ansible_connection: community.docker.docker
-        ansible_shell_type: sh
-        ansible_remote_tmp: /tmp/.ansible/tmp
-      openwrt_x86_64-22.03.7:
-        ansible_connection: community.docker.docker
-        ansible_shell_type: sh
-        ansible_remote_tmp: /tmp/.ansible/tmp
-      openwrt_x86_64-21.02.7:
-        ansible_connection: community.docker.docker
-        ansible_shell_type: sh
-        ansible_remote_tmp: /tmp/.ansible/tmp
-  env:
-    ANSIBLE_COLLECTIONS_PATH: "${HOME}/.ansible/collections:/usr/share/ansible/collections:${MOLECULE_SCENARIO_DIRECTORY}/../../../.."
-verifier:
-  name: ansible
-lint: |
-  set -e
-  yamllint .
-  ansible-lint .
+scenario:
+  test_sequence:
+    - create
+    - verify
+    - destroy
