chore: add vscode plugin in .devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,6 +15,7 @@
       },
       "extensions": [
         "chrislajoie.vscode-modelines",
+        "eamodio.gitlens",
         "esbenp.prettier-vscode",
         "michelemelluso.gitignore",
         "ms-python.python",
