test(molecule): simplify and parametrise collection-level molecule - part 3

--- a/extensions/molecule/default/molecule.yml
+++ b/extensions/molecule/default/molecule.yml
@@ -8,6 +8,9 @@ platforms:
     image: "openwrt/rootfs:x86_64-${OPENWRT_VERSION}"
     command: sh -c 'mkdir -p /var/lock; sleep infinity'
     pre_build_image: true
+provisioner:
+  env:
+    ANSIBLE_COLLECTIONS_PATH: "${HOME}/.ansible/collections:/usr/share/ansible/collections:${MOLECULE_SCENARIO_DIRECTORY}/../../../.."
 scenario:
   test_sequence:
     - create
